# rfm-http-api

./: CMakeLists.txt  conanfile.py
include/: api-json-fetch.hpp  curl-api-json-fetcher.hpp  exceptions.hpp
src/: curl-api-json-fetcher.cpp  exceptions.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
